force-app/main/default/objects/PricebookEntry/fields/Box_Price__c.field-meta.xml
<CustomField>
    <fullName>Box_Price__c</fullName>
    <formula>IF(Pricebook2.RecordType.Name = &apos;EMEA&apos;,
Product2.EMEA_Box_Quantity__c  * UnitPrice ,
Product2.NACA_Box_Quantity__c * UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>