force-app/main/default/objects/PricebookEntry/fields/Box_Qty__c.field-meta.xml
<CustomField>
    <fullName>Box_Qty__c</fullName>
    <formula>IF(Pricebook2.RecordType.Name = &apos;EMEA&apos;,
Product2.EMEA_Box_Quantity__c,
Product2.NACA_Box_Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>