force-app/main/default/objects/PricebookEntry/fields/Case_Price__c.field-meta.xml
<CustomField>
    <fullName>Case_Price__c</fullName>
    <formula>IF(Pricebook2.RecordType.Name = &apos;EMEA&apos;,
Product2.EMEA_Case_Qty__c *  UnitPrice ,
Product2.NACA_Case_Qty__c *  UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>