force-app/main/default/objects/PricebookEntry/fields/Case_Qty__c.field-meta.xml
<CustomField>
    <fullName>Case_Qty__c</fullName>
    <formula>IF(Pricebook2.RecordType.Name = &apos;NACA&apos;, 
Product2.NACA_Case_Qty__c, 
Product2.EMEA_Case_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>